archiving in download_nem_data_current.py, updated .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,5 @@
 
 /src/nem_data/metadata_archive.pkl
 /src/nem_data/metadata_current.pkl
-/src/nem_data/metadata_current_*.pkl
+#/src/nem_data/metadata_current_*.pkl
+/src/nem_data/metadata_current_????_??_??.pkl
