--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@
 /src/nem_data/metadata_current.pkl
 #/src/nem_data/metadata_current_*.pkl
 /src/nem_data/metadata_current_????_??_??.pkl
+/src/nem_data/metadata_archive_????_??_??.pkl
